tests/errors/compiler/wrong_arg_in_send/int_argument.c
int main()
{
	int a;
	t_msg_send(a);
	return 0;
}